fixing textarea spacing and adding submit hover style

--- a/style.css
+++ b/style.css
@@ -102,13 +102,22 @@ ul {
 
 #submit {
 	background-color: #66ffe0; /*turquoise*/
-  border: none;
+  border: solid 2px #66ffe0;
 	cursor: pointer;
 	font-size: 1em;
 	color: #1d1d1dbd;
+	-webkit-border-radius: 5px;
+		-moz-border-radius: 5px;
+    border-radius: 5px;
+  transition-duration: 0.3s;
 	width: 135px;
 	height: 50px;
 	margin: 0;
+}
+
+#submit:hover {
+	background-color: white;
+	border: solid 1px #66ffe0;
 }
 
 *:focus {
